GeneralQC experimentation notebook, new generalQC ansatz definition

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-lambeq==0.3.3
-discopy>=1.1.4
-pytket>=0.19.2
-tensornetwork
-torch>=1.12.1
+lambeq
 nltk
 noisyopt
 qiskit
 qiskit-machine-learning
-
